--- a/arch/arm/configs/vision_defconfig
+++ b/arch/arm/configs/vision_defconfig
@@ -378,24 +378,25 @@ CONFIG_MICROP_COMMON=y
 # HP Board Selection
 #
 CONFIG_MSM_STACKED_MEMORY=y
-CONFIG_MSM_AMSS_VERSION=6225
+CONFIG_MSM_AMSS_VERSION=1200
 # CONFIG_MSM_AMSS_VERSION_6210 is not set
 # CONFIG_MSM_AMSS_VERSION_6220 is not set
-CONFIG_MSM_AMSS_VERSION_6225=y
+# CONFIG_MSM_AMSS_VERSION_6225 is not set
+CONFIG_MSM_AMSS_VERSION_1200=y
 CONFIG_MSM7X00A_USE_GP_TIMER=y
 # CONFIG_MSM7X00A_USE_DG_TIMER is not set
-# CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE_SUSPEND is not set
-CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE=y
+CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE_SUSPEND=y
+# CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE is not set
 # CONFIG_MSM7X00A_SLEEP_MODE_APPS_SLEEP is not set
 # CONFIG_MSM7X00A_SLEEP_MODE_RAMP_DOWN_AND_WAIT_FOR_INTERRUPT is not set
 # CONFIG_MSM7X00A_SLEEP_WAIT_FOR_INTERRUPT is not set
-CONFIG_MSM7X00A_SLEEP_MODE=1
-# CONFIG_MSM7X00A_IDLE_SLEEP_MODE_POWER_COLLAPSE_SUSPEND is not set
+CONFIG_MSM7X00A_SLEEP_MODE=0
+CONFIG_MSM7X00A_IDLE_SLEEP_MODE_POWER_COLLAPSE_SUSPEND=y
 # CONFIG_MSM7X00A_IDLE_SLEEP_MODE_POWER_COLLAPSE is not set
 # CONFIG_MSM7X00A_IDLE_SLEEP_MODE_APPS_SLEEP is not set
 # CONFIG_MSM7X00A_IDLE_SLEEP_MODE_RAMP_DOWN_AND_WAIT_FOR_INTERRUPT is not set
-CONFIG_MSM7X00A_IDLE_SLEEP_WAIT_FOR_INTERRUPT=y
-CONFIG_MSM7X00A_IDLE_SLEEP_MODE=4
+# CONFIG_MSM7X00A_IDLE_SLEEP_WAIT_FOR_INTERRUPT is not set
+CONFIG_MSM7X00A_IDLE_SLEEP_MODE=0
 CONFIG_MSM7X00A_IDLE_SLEEP_MIN_TIME=20000000
 CONFIG_MSM7X00A_IDLE_SPIN_TIME=80000
 CONFIG_MSM_IDLE_STATS=y
@@ -462,23 +463,11 @@ CONFIG_MSM_SUBSYSTEM_RESTART=y
 # CONFIG_MSM_SYSMON_COMM is not set
 CONFIG_SMD_OFFSET_TCXO_STAT=0xFC2A0
 CONFIG_SMD_OFFSET_NEGATE_CLIENT_STAT=0xFC124
-CONFIG_MSM_PIL=y
-# CONFIG_MSM_PIL_MODEM is not set
-# CONFIG_MSM_PIL_QDSP6V3 is not set
-# CONFIG_MSM_PIL_QDSP6V4 is not set
-# CONFIG_MSM_PIL_LPASS_QDSP6V5 is not set
-# CONFIG_MSM_PIL_MSS_QDSP6V5 is not set
-# CONFIG_MSM_PIL_RIVA is not set
-# CONFIG_MSM_PIL_TZAPPS is not set
-# CONFIG_MSM_PIL_DSPS is not set
-# CONFIG_MSM_PIL_VIDC is not set
-# CONFIG_MSM_PIL_VENUS is not set
-# CONFIG_MSM_PIL_GSS is not set
-# CONFIG_MSM_PIL_PRONTO is not set
+# CONFIG_MSM_PIL is not set
 # CONFIG_MSM_SCM is not set
-CONFIG_SCORPION_Uni_45nm_BUG=y
+# CONFIG_SCORPION_Uni_45nm_BUG is not set
 # CONFIG_MSM_TZ_LOG is not set
-CONFIG_MSM_DIRECT_SCLK_ACCESS=y
+# CONFIG_MSM_DIRECT_SCLK_ACCESS is not set
 CONFIG_MSM_GPIOMUX=y
 CONFIG_MSM_MODEM_RESTART=y
 CONFIG_MSM_PM2=y
@@ -1623,8 +1612,13 @@ CONFIG_SENSORS_AKM8975=y
 # CONFIG_INPUT_ISL29023 is not set
 CONFIG_LIGHTSENSOR_MICROP=y
 CONFIG_INPUT_CAPELLA_CM3602=y
+CONFIG_SENSORS_BMA150_SPI=y
 # CONFIG_MPU_SENSORS_MPU3050 is not set
 # CONFIG_MPU_SENSORS_TIMERIRQ is not set
+CONFIG_INPUT_OPTICALJOYSTICK=y
+CONFIG_OPTICALJOYSTICK_CRUCIAL=y
+# CONFIG_OPTICALJOYSTICK_CRUCIAL_uP is not set
+CONFIG_OPTICALJOYSTICK_CRUCIAL_SPI=y
 
 #
 # Hardware I/O ports
@@ -1763,6 +1757,7 @@ CONFIG_SPI_AIC3254=y
 # CONFIG_SPI_PXA2XX_PCI is not set
 # CONFIG_SPI_XILINX is not set
 CONFIG_SPI_QSD=y
+CONFIG_SPI_CRUCIAL_OJ=y
 # CONFIG_SPI_DESIGNWARE is not set
 
 #
@@ -2286,7 +2281,7 @@ CONFIG_MSM_VIDC_VDEC=y
 # CONFIG_MSM_VIDC_CONTENT_PROTECTION is not set
 CONFIG_FB_MSM=y
 # CONFIG_FB_MSM_BACKLIGHT is not set
-# CONFIG_FB_MSM_LOGO is not set
+CONFIG_FB_MSM_LOGO=y
 CONFIG_FB_MSM_LCDC_HW=y
 CONFIG_FB_MSM_TRIPLE_BUFFER=y
 CONFIG_FB_MSM_MDP_HW=y
@@ -2413,8 +2408,8 @@ CONFIG_FB_MSM_PANEL_NONE=y
 # CONFIG_FB_MSM_TVOUT_PAL_M is not set
 # CONFIG_FB_MSM_TVOUT_PAL_N is not set
 CONFIG_FB_MSM_TVOUT_NONE=y
-# CONFIG_FB_MSM_DEFAULT_DEPTH_RGB565 is not set
-CONFIG_FB_MSM_DEFAULT_DEPTH_ARGB8888=y
+CONFIG_FB_MSM_DEFAULT_DEPTH_RGB565=y
+# CONFIG_FB_MSM_DEFAULT_DEPTH_ARGB8888 is not set
 # CONFIG_FB_MSM_DEFAULT_DEPTH_RGBA8888 is not set
 # CONFIG_FB_MSM_EBI2_EPSON_S1D_QVGA_PANEL is not set
 # CONFIG_FB_MSM_EBI2_PANEL_DETECT is not set
@@ -2804,7 +2799,8 @@ CONFIG_MMC_MSM_SDC2_SUPPORT=y
 CONFIG_MMC_MSM_SDC2_8_BIT_SUPPORT=y
 # CONFIG_MMC_MSM_SDC3_SUPPORT is not set
 # CONFIG_MMC_MSM_SDC3_POLLING is not set
-# CONFIG_MMC_MSM_SDC4_SUPPORT is not set
+CONFIG_MMC_MSM_SDC4_SUPPORT=y
+# CONFIG_MMC_MSM_SDC4_8_BIT_SUPPORT is not set
 # CONFIG_MMC_MSM_SDC5_SUPPORT is not set
 # CONFIG_MMC_DW is not set
 # CONFIG_MMC_VUB300 is not set
@@ -2836,7 +2832,7 @@ CONFIG_LEDS_GPIO_PLATFORM=y
 # CONFIG_LEDS_BD2802 is not set
 # CONFIG_LEDS_MSM_PMIC is not set
 # CONFIG_LEDS_PMIC8058 is not set
-# CONFIG_LEDS_PM8058 is not set
+CONFIG_LEDS_PM8058=y
 # CONFIG_LEDS_LT3593 is not set
 # CONFIG_LEDS_RENESAS_TPU is not set
 # CONFIG_LEDS_TCA6507 is not set
