--- a/drivers/usb/Kconfig
+++ b/drivers/usb/Kconfig
@@ -122,6 +122,11 @@ config USB
 	  To compile this driver as a module, choose M here: the
 	  module will be called usbcore.
 
+config USB_OTG_HOST
+	boolean "USB OTG Host function"
+	depends on USB_OTG
+	default n
+
 source "drivers/usb/core/Kconfig"
 
 source "drivers/usb/dwc3/Kconfig"
