--- a/arch/arm/configs/pyramid_defconfig
+++ b/arch/arm/configs/pyramid_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.11 Kernel Configuration
+# Linux/arm 3.4.66 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -29,6 +29,7 @@ CONFIG_NEED_MACH_IO_H=y
 CONFIG_NEED_MACH_MEMORY_H=y
 CONFIG_PHYS_OFFSET=0x48000000
 CONFIG_GENERIC_BUG=y
+# CONFIG_ARCH_RANDOM is not set
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
 CONFIG_IRQ_WORK=y
@@ -372,6 +373,7 @@ CONFIG_MSM_ADM3=y
 #
 # MSM Board Selection
 #
+# CONFIG_ARCH_MSM7X30_SMD is not set
 # CONFIG_MACH_MSM8X60_SURF is not set
 # CONFIG_MACH_MSM8X60_FFA is not set
 # CONFIG_MACH_MSM8X60_FLUID is not set
@@ -402,13 +404,22 @@ CONFIG_MACH_HTC_DUMMY=y
 #
 # HTC Specific Patches
 #
+# CONFIG_HTC_BATT_ALARM is not set
 CONFIG_HTC_BATT_CORE=y
 CONFIG_HTC_BATT_8x60=y
 # CONFIG_HTC_BATT_8960 is not set
+# CONFIG_HTC_BATTCHG is not set
+# CONFIG_HTC_BATTCHG_MAX8957 is not set
 CONFIG_HTC_HEADSET_MGR=y
 CONFIG_HTC_HEADSET_GPIO=y
 CONFIG_HTC_HEADSET_PMIC=y
 # CONFIG_HTC_HEADSET_ONE_WIRE is not set
+# CONFIG_MICROP_COMMON is not set
+
+#
+# HP Board Selection
+#
+# CONFIG_MACH_TENDERLOIN is not set
 CONFIG_MSM_STACKED_MEMORY=y
 CONFIG_KERNEL_MSM_CONTIG_MEM_REGION=y
 CONFIG_KERNEL_PMEM_SMI_REGION=y
@@ -416,6 +427,7 @@ CONFIG_MSM_AMSS_VERSION=6225
 # CONFIG_MSM_AMSS_VERSION_6210 is not set
 # CONFIG_MSM_AMSS_VERSION_6220 is not set
 CONFIG_MSM_AMSS_VERSION_6225=y
+# CONFIG_MSM_AMSS_VERSION_1200 is not set
 CONFIG_MSM7X00A_USE_GP_TIMER=y
 # CONFIG_MSM7X00A_USE_DG_TIMER is not set
 # CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE_SUSPEND is not set
@@ -470,6 +482,7 @@ CONFIG_MSM_RPC_OEM_RAPI=y
 # CONFIG_MSM_RPCSERVER_HANDSET is not set
 CONFIG_MSM_RMT_STORAGE_CLIENT=y
 # CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
+# CONFIG_MSM_RMT_STORAGE_SERVER is not set
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
@@ -494,6 +507,8 @@ CONFIG_MSM_IDLE_WAIT_ON_MODEM=0
 CONFIG_MSM_RPM_REGULATOR=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_SYSMON_COMM=y
+CONFIG_SMD_OFFSET_TCXO_STAT=0x0
+CONFIG_SMD_OFFSET_NEGATE_CLIENT_STAT=0x0
 CONFIG_MSM_PIL=y
 # CONFIG_MSM_PIL_MODEM is not set
 CONFIG_MSM_PIL_QDSP6V3=y
@@ -555,6 +570,8 @@ CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 # CONFIG_MSM_CACHE_DUMP is not set
 # CONFIG_MSM_HSIC_SYSMON is not set
 # CONFIG_MSM_CPU_PWRCTL is not set
+# CONFIG_MSM_UARTDM is not set
+# CONFIG_REMOVE_EBI1_FIXED_CLK is not set
 
 #
 # System MMU
@@ -609,6 +626,7 @@ CONFIG_ARM_ERRATA_720789=y
 # CONFIG_ARM_ERRATA_754322 is not set
 # CONFIG_ARM_ERRATA_754327 is not set
 # CONFIG_ARM_ERRATA_764369 is not set
+# CONFIG_ARM_ERRATA_775420 is not set
 # CONFIG_KSAPI is not set
 CONFIG_ARM_GIC=y
 # CONFIG_FIQ_DEBUGGER is not set
@@ -1279,6 +1297,12 @@ CONFIG_CABLE_DETECT_ACCESSORY_BY_ADC=y
 # CONFIG_AMP_TFA9887 is not set
 CONFIG_INPUT_ISL29028=y
 CONFIG_INPUT_ISL29029=y
+# CONFIG_KERNEL_LOG is not set
+# CONFIG_HSUART is not set
+# CONFIG_NDUID is not set
+# CONFIG_USER_PINS is not set
+# CONFIG_HRES_COUNTER is not set
+# CONFIG_MDMGPIO is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -1304,6 +1328,7 @@ CONFIG_INPUT_ISL29029=y
 #
 # CONFIG_ALTERA_STAPL is not set
 # CONFIG_SLIMPORT_ANX7808 is not set
+# CONFIG_A6_SUPPORT is not set
 
 #
 # SCSI device support
@@ -1618,10 +1643,12 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_LGE_COMMON is not set
 # CONFIG_TOUCHSCREEN_LGE_SYNAPTICS is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
+# CONFIG_TOUCHSCREEN_ATMEL is not set
 # CONFIG_TOUCHSCREEN_ATMEL_224E is not set
 CONFIG_TOUCHSCREEN_CYPRESS_TMA=y
 # CONFIG_TOUCHSCREEN_CYPRESS_CS is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_3K is not set
+# CONFIG_TOUCHSCREEN_CY8CTMA395 is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -1650,11 +1677,12 @@ CONFIG_PMIC8058_OTHC=y
 # CONFIG_STM_LIS3DH is not set
 # CONFIG_BMP18X is not set
 # CONFIG_SENSORS_AKM8975 is not set
-# CONFIG_SENSORS_AKM8975_PANA_GYRO is not set
 # CONFIG_SENSORS_PANASONIC_GYRO is not set
 # CONFIG_SENSORS_BMA250 is not set
 CONFIG_INPUT_CAPELLA_CM3629=y
 # CONFIG_SENSORS_R3GD20 is not set
+# CONFIG_INPUT_ISL29023 is not set
+# CONFIG_INPUT_CAPELLA_CM3602 is not set
 CONFIG_MPU_SENSORS_MPU3050=y
 # CONFIG_MPU_SENSORS_ACCELEROMETER_NONE is not set
 # CONFIG_MPU_SENSORS_ADXL346 is not set
@@ -1680,6 +1708,7 @@ CONFIG_MPU_SENSORS_AK8975=y
 # CONFIG_MPU_SENSORS_HSCDTD004A is not set
 CONFIG_MPU_SENSORS_TIMERIRQ=y
 # CONFIG_MPU_SENSORS_DEBUG is not set
+# CONFIG_INPUT_OPTICALJOYSTICK is not set
 
 #
 # Hardware I/O ports
@@ -1896,6 +1925,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_DS2780 is not set
 # CONFIG_BATTERY_DS2781 is not set
 # CONFIG_BATTERY_DS2782 is not set
+# CONFIG_BATTERY_DS2746 is not set
 # CONFIG_BATTERY_SBS is not set
 # CONFIG_BATTERY_BQ27x00 is not set
 # CONFIG_BATTERY_MAX17040 is not set
@@ -1915,6 +1945,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_LTC4088_CHARGER is not set
 # CONFIG_BATTERY_BCL is not set
 # CONFIG_CHARGER_SMB347 is not set
+# CONFIG_MAX8903B_CHARGER is not set
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
 # CONFIG_HWMON_DEBUG_CHIP is not set
@@ -2661,6 +2692,7 @@ CONFIG_USB_SUPPORT=y
 CONFIG_USB_COMMON=y
 CONFIG_USB_ARCH_HAS_HCD=y
 CONFIG_USB=y
+CONFIG_USB_OTG_HOST=y
 # CONFIG_USB_DEBUG is not set
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 
@@ -2728,7 +2760,6 @@ CONFIG_USB_STORAGE_ONETOUCH=y
 CONFIG_USB_STORAGE_KARMA=y
 CONFIG_USB_STORAGE_CYPRESS_ATACB=y
 # CONFIG_USB_STORAGE_ENE_UB6250 is not set
-# CONFIG_USB_UAS is not set
 # CONFIG_USB_LIBUSUAL is not set
 
 #
@@ -2769,6 +2800,7 @@ CONFIG_USB_EHSET_TEST_FIXTURE=y
 # CONFIG_USB_QCOM_DIAG_BRIDGE is not set
 # CONFIG_USB_QCOM_MDM_BRIDGE is not set
 # CONFIG_USB_QCOM_KS_BRIDGE is not set
+# CONFIG_USB_QCOM_IPC_BRIDGE is not set
 CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG is not set
 # CONFIG_USB_GADGET_DEBUG_FILES is not set
