a6: do not set A6 enabled by default

--- a/drivers/misc/a6/Kconfig
+++ b/drivers/misc/a6/Kconfig
@@ -1,7 +1,7 @@
 menuconfig A6_SUPPORT
 	tristate "Palm A6 support"
 	depends on I2C
-	default y
+	default n
 	help
 	  This option enables support for Palm A6 controller.
 
@@ -12,7 +12,7 @@ if A6_SUPPORT
 config A6
 	tristate "Palm A6 charging controller"
 	depends on I2C
-	default y
+	default n
 	help
 	 Say Y to include support for the Palm A6 charging controller.
 
