--- a/arch/arm/mach-msm/htc/Makefile.board
+++ b/arch/arm/mach-msm/htc/Makefile.board
@@ -28,3 +28,6 @@ obj-$(CONFIG_MACH_PYRAMID) += pyramid/
 
 # VISION
 obj-$(CONFIG_MACH_VISION) += vision/
+
+# M7_UL
+obj-$(CONFIG_MACH_M7_UL) += m7ul/
