tenderloin: remove CFG80211, as it's built with backport package

--- a/arch/arm/configs/tenderloin_android_defconfig
+++ b/arch/arm/configs/tenderloin_android_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.11 Kernel Configuration
+# Linux/arm 3.4.66 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -29,6 +29,7 @@ CONFIG_NEED_MACH_IO_H=y
 CONFIG_NEED_MACH_MEMORY_H=y
 CONFIG_PHYS_OFFSET=0x40200000
 CONFIG_GENERIC_BUG=y
+# CONFIG_ARCH_RANDOM is not set
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
 CONFIG_IRQ_WORK=y
@@ -380,6 +381,7 @@ CONFIG_MSM_ADM3=y
 #
 # MSM Board Selection
 #
+# CONFIG_ARCH_MSM7X30_SMD is not set
 # CONFIG_MACH_MSM8X60_SURF is not set
 # CONFIG_MACH_MSM8X60_FFA is not set
 # CONFIG_MACH_MSM8X60_FLUID is not set
@@ -408,8 +410,12 @@ CONFIG_BOARD_HEADER_FILE=""
 #
 # HTC Specific Patches
 #
+# CONFIG_HTC_BATT_ALARM is not set
 # CONFIG_HTC_BATT_CORE is not set
+# CONFIG_HTC_BATTCHG is not set
+# CONFIG_HTC_BATTCHG_MAX8957 is not set
 # CONFIG_HTC_HEADSET_MGR is not set
+# CONFIG_MICROP_COMMON is not set
 CONFIG_MACH_HP=y
 
 #
@@ -424,6 +430,7 @@ CONFIG_MSM_AMSS_VERSION=6225
 # CONFIG_MSM_AMSS_VERSION_6210 is not set
 # CONFIG_MSM_AMSS_VERSION_6220 is not set
 CONFIG_MSM_AMSS_VERSION_6225=y
+# CONFIG_MSM_AMSS_VERSION_1200 is not set
 CONFIG_MSM7X00A_USE_GP_TIMER=y
 # CONFIG_MSM7X00A_USE_DG_TIMER is not set
 # CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE_SUSPEND is not set
@@ -478,6 +485,7 @@ CONFIG_MSM_RPC_OEM_RAPI=y
 # CONFIG_MSM_RPCSERVER_HANDSET is not set
 CONFIG_MSM_RMT_STORAGE_CLIENT=y
 # CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
+# CONFIG_MSM_RMT_STORAGE_SERVER is not set
 CONFIG_MSM_DALRPC=y
 CONFIG_MSM_DALRPC_TEST=m
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
@@ -501,6 +509,8 @@ CONFIG_MSM_IDLE_WAIT_ON_MODEM=0
 CONFIG_MSM_RPM_REGULATOR=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_SYSMON_COMM=y
+CONFIG_SMD_OFFSET_TCXO_STAT=0x0
+CONFIG_SMD_OFFSET_NEGATE_CLIENT_STAT=0x0
 CONFIG_MSM_PIL=y
 # CONFIG_MSM_PIL_MODEM is not set
 # CONFIG_MSM_PIL_QDSP6V3 is not set
@@ -562,6 +572,7 @@ CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 # CONFIG_MSM_HSIC_SYSMON is not set
 # CONFIG_MSM_CPU_PWRCTL is not set
 CONFIG_MSM_UARTDM=y
+# CONFIG_REMOVE_EBI1_FIXED_CLK is not set
 
 #
 # System MMU
@@ -616,6 +627,7 @@ CONFIG_ARM_ERRATA_720789=y
 # CONFIG_ARM_ERRATA_754322 is not set
 # CONFIG_ARM_ERRATA_754327 is not set
 # CONFIG_ARM_ERRATA_764369 is not set
+# CONFIG_ARM_ERRATA_775420 is not set
 # CONFIG_KSAPI is not set
 CONFIG_ARM_GIC=y
 # CONFIG_FIQ_DEBUGGER is not set
@@ -1190,18 +1202,13 @@ CONFIG_WEXT_CORE=y
 CONFIG_WEXT_PROC=y
 CONFIG_WEXT_SPY=y
 CONFIG_WEXT_PRIV=y
-CONFIG_CFG80211=y
-# CONFIG_NL80211_TESTMODE is not set
-# CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
-# CONFIG_CFG80211_REG_DEBUG is not set
-CONFIG_CFG80211_DEFAULT_PS=y
-# CONFIG_CFG80211_DEBUGFS is not set
-# CONFIG_CFG80211_INTERNAL_REGDB is not set
-CONFIG_CFG80211_WEXT=y
+# CONFIG_CFG80211 is not set
 CONFIG_WIRELESS_EXT_SYSFS=y
 # CONFIG_LIB80211 is not set
-# CONFIG_CFG80211_ALLOW_RECONNECT is not set
-# CONFIG_MAC80211 is not set
+
+#
+# CFG80211 needs to be enabled for MAC80211
+#
 # CONFIG_WIMAX is not set
 CONFIG_RFKILL=y
 CONFIG_RFKILL_PM=y
@@ -1533,21 +1540,10 @@ CONFIG_USB_NET_CDC_NCM=y
 # CONFIG_MSM_RMNET_USB is not set
 CONFIG_WLAN=y
 # CONFIG_USB_ZD1201 is not set
-# CONFIG_USB_NET_RNDIS_WLAN is not set
 CONFIG_LIBRA_SDIOIF=m
 # CONFIG_ATH6K_LEGACY_EXT is not set
-CONFIG_ATH_COMMON=y
-# CONFIG_ATH_DEBUG is not set
-CONFIG_ATH6KL=y
-CONFIG_ATH6KL_SDIO=m
-# CONFIG_ATH6KL_USB is not set
-# CONFIG_ATH6KL_DEBUG is not set
 # CONFIG_BCMDHD is not set
-# CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
-# CONFIG_IWM is not set
-# CONFIG_LIBERTAS is not set
-# CONFIG_MWIFIEX is not set
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
@@ -1644,6 +1640,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_LGE_COMMON is not set
 # CONFIG_TOUCHSCREEN_LGE_SYNAPTICS is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
+# CONFIG_TOUCHSCREEN_ATMEL is not set
 # CONFIG_TOUCHSCREEN_ATMEL_224E is not set
 # CONFIG_TOUCHSCREEN_CYPRESS_TMA is not set
 # CONFIG_TOUCHSCREEN_CYPRESS_CS is not set
@@ -1677,13 +1674,13 @@ CONFIG_PMIC8058_OTHC=y
 # CONFIG_STM_LIS3DH is not set
 # CONFIG_BMP18X is not set
 # CONFIG_SENSORS_AKM8975 is not set
-# CONFIG_SENSORS_AKM8975_PANA_GYRO is not set
 # CONFIG_SENSORS_PANASONIC_GYRO is not set
 # CONFIG_SENSORS_BMA250 is not set
 # CONFIG_INPUT_CAPELLA_CM3629 is not set
 # CONFIG_SENSORS_R3GD20 is not set
 CONFIG_INPUT_LSM303DLH=y
 CONFIG_INPUT_ISL29023=y
+# CONFIG_INPUT_CAPELLA_CM3602 is not set
 CONFIG_MPU_SENSORS_MPU3050=y
 # CONFIG_MPU_SENSORS_ACCELEROMETER_NONE is not set
 # CONFIG_MPU_SENSORS_ADXL346 is not set
@@ -1709,6 +1706,7 @@ CONFIG_MPU_SENSORS_AK8975=y
 # CONFIG_MPU_SENSORS_HSCDTD004A is not set
 # CONFIG_MPU_SENSORS_TIMERIRQ is not set
 # CONFIG_MPU_SENSORS_DEBUG is not set
+# CONFIG_INPUT_OPTICALJOYSTICK is not set
 
 #
 # Hardware I/O ports
@@ -1900,6 +1898,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_DS2780 is not set
 # CONFIG_BATTERY_DS2781 is not set
 # CONFIG_BATTERY_DS2782 is not set
+# CONFIG_BATTERY_DS2746 is not set
 # CONFIG_BATTERY_SBS is not set
 # CONFIG_BATTERY_BQ27x00 is not set
 # CONFIG_BATTERY_MAX17040 is not set
@@ -2659,7 +2658,6 @@ CONFIG_USB_STORAGE_ONETOUCH=y
 CONFIG_USB_STORAGE_KARMA=y
 CONFIG_USB_STORAGE_CYPRESS_ATACB=y
 # CONFIG_USB_STORAGE_ENE_UB6250 is not set
-# CONFIG_USB_UAS is not set
 # CONFIG_USB_LIBUSUAL is not set
 
 #
@@ -2754,6 +2752,7 @@ CONFIG_USB_EHSET_TEST_FIXTURE=y
 # CONFIG_USB_QCOM_DIAG_BRIDGE is not set
 # CONFIG_USB_QCOM_MDM_BRIDGE is not set
 # CONFIG_USB_QCOM_KS_BRIDGE is not set
+# CONFIG_USB_QCOM_IPC_BRIDGE is not set
 CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG is not set
 # CONFIG_USB_GADGET_DEBUG_FILES is not set
@@ -2871,6 +2870,7 @@ CONFIG_LEDS_GPIO_PLATFORM=y
 # CONFIG_LEDS_LP5523 is not set
 # CONFIG_LEDS_PCA955X is not set
 # CONFIG_LEDS_PM8XXX is not set
+# CONFIG_LEDS_PM8921 is not set
 # CONFIG_LEDS_PM8038 is not set
 # CONFIG_LEDS_PCA9633 is not set
 # CONFIG_LEDS_REGULATOR is not set
@@ -2977,7 +2977,6 @@ CONFIG_RTC_DRV_PM8XXX=y
 #
 CONFIG_STAGING=y
 # CONFIG_USBIP_CORE is not set
-# CONFIG_PRISM2_USB is not set
 # CONFIG_ECHO is not set
 # CONFIG_ASUS_OLED is not set
 # CONFIG_RTLLIB is not set
