--- a/arch/arm/configs/tenderloin_android_defconfig
+++ b/arch/arm/configs/tenderloin_android_defconfig
@@ -493,7 +493,7 @@ CONFIG_MSM_DALRPC_TEST=m
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
 # CONFIG_AMSS_7X25_VERSION_2008 is not set
-# CONFIG_MSM8X60_AUDIO is not set
+# CONFIG_MSM8X60_AUDIO=y
 # CONFIG_MSM8X60_AUDIO_1X is not set
 CONFIG_RTAC=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
@@ -2513,10 +2513,18 @@ CONFIG_SND_SOC=y
 # CONFIG_SND_SOC_MSM_QDSP6V2_INTF is not set
 # CONFIG_SND_SOC_QDSP6 is not set
 # CONFIG_SND_SOC_QDSP6V2 is not set
+CONFIG_SND_MSM_MVS_DAI_SOC=y
+CONFIG_SND_SOC_MSM8X60_PCM=y
+CONFIG_SND_SOC_MSM8X60_DAI=y
+CONFIG_SND_VOIP_PCM=y
+CONFIG_SND_SOC_MSM8X60_PLATFORM=y
+CONFIG_SND_SOC_MSM8X60=y
+CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_MSM8660_APQ is not set
 # CONFIG_SND_SOC_DUAL_AMIC is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
+CONFIG_SND_SOC_WM8994=y
 # CONFIG_SND_SOC_TPA2028D is not set
 # CONFIG_SND_SOC_TPA2051D3 is not set
 # CONFIG_SOUND_PRIME is not set
