wm8994: Updated config and removed config from Makefile
Seems to be an issue with the configs not making to the makefile.
All dependencies are in place unsure why it's not working.
At this point the codec gets probed and is registered but now
can't seem to get wm8994_codec_probe to hit.

--- a/arch/arm/configs/tenderloin_android_defconfig
+++ b/arch/arm/configs/tenderloin_android_defconfig
@@ -2524,6 +2524,7 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_DUAL_AMIC is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
+CONFIG_SND_SOC_WM_HUBS=y
 CONFIG_SND_SOC_WM8994=y
 # CONFIG_SND_SOC_TPA2028D is not set
 # CONFIG_SND_SOC_TPA2051D3 is not set
