tenderloin: add missing camera options to kernel config

--- a/arch/arm/configs/cyanogenmod_tenderloin_defconfig
+++ b/arch/arm/configs/cyanogenmod_tenderloin_defconfig
@@ -2309,7 +2309,7 @@ CONFIG_MSM_CAMERA=y
 # CONFIG_OV5640 is not set
 # CONFIG_OV5647 is not set
 CONFIG_WEBCAM_MT9M113=y
-# CONFIG_MT9M114 is not set
+# CONFIG_WEBCAM_MT9M114 is not set
 # CONFIG_WEBCAM_OV7692 is not set
 # CONFIG_WEBCAM_OV9726 is not set
 # CONFIG_VX6953 is not set
@@ -2322,6 +2322,7 @@ CONFIG_WEBCAM_MT9M113=y
 # CONFIG_IMX072 is not set
 # CONFIG_OV2720 is not set
 # CONFIG_MSM_CAMERA_FLASH is not set
+# CONFIG_VIDEO_MSM is not set
 # CONFIG_MSM_CAMERA_SENSOR is not set
 # CONFIG_MSM_ACTUATOR is not set
 CONFIG_MSM_GEMINI=y
