--- a/arch/arm/configs/jet_defconfig
+++ b/arch/arm/configs/jet_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.0 Kernel Configuration
+# Linux/arm 3.4.73 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -29,6 +29,7 @@ CONFIG_NEED_MACH_IO_H=y
 CONFIG_NEED_MACH_MEMORY_H=y
 CONFIG_PHYS_OFFSET=0x80400000
 CONFIG_GENERIC_BUG=y
+# CONFIG_ARCH_RANDOM is not set
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
 CONFIG_IRQ_WORK=y
@@ -356,6 +357,7 @@ CONFIG_MSM_REMOTE_SPINLOCK_SFPB=y
 #
 # MSM Board Selection
 #
+# CONFIG_ARCH_MSM7X30_SMD is not set
 # CONFIG_MACH_MSM8960_CDP is not set
 # CONFIG_MACH_MSM8960_MTP is not set
 # CONFIG_MACH_MSM8960_FLUID is not set
@@ -378,6 +380,7 @@ CONFIG_MACH_HTC=y
 # HTC Board Selection
 #
 # CONFIG_MACH_ELITE is not set
+# CONFIG_MACH_FIGHTER is not set
 CONFIG_MACH_JET=y
 # CONFIG_MACH_VILLE is not set
 # CONFIG_MACH_HTC_DUMMY is not set
@@ -385,17 +388,26 @@ CONFIG_MACH_JET=y
 #
 # HTC Specific Patches
 #
+# CONFIG_HTC_BATT_ALARM is not set
 CONFIG_HTC_BATT_CORE=y
+# CONFIG_HTC_BATT_8x60 is not set
 CONFIG_HTC_BATT_8960=y
 CONFIG_HTC_HEADSET_MGR=y
+# CONFIG_HTC_HEADSET_GPIO is not set
 CONFIG_HTC_HEADSET_PMIC=y
 # CONFIG_HTC_HEADSET_ONE_WIRE is not set
+# CONFIG_MICROP_COMMON is not set
+
+#
+# HP Board Selection
+#
 # CONFIG_MSM_STACKED_MEMORY is not set
 # CONFIG_KERNEL_MSM_CONTIG_MEM_REGION is not set
 CONFIG_MSM_AMSS_VERSION=6225
 # CONFIG_MSM_AMSS_VERSION_6210 is not set
 # CONFIG_MSM_AMSS_VERSION_6220 is not set
 CONFIG_MSM_AMSS_VERSION_6225=y
+# CONFIG_MSM_AMSS_VERSION_1200 is not set
 CONFIG_MSM7X00A_USE_GP_TIMER=y
 # CONFIG_MSM7X00A_USE_DG_TIMER is not set
 CONFIG_MSM7X00A_SLEEP_MODE_POWER_COLLAPSE_SUSPEND=y
@@ -463,6 +475,8 @@ CONFIG_MSM_IDLE_WAIT_ON_MODEM=0
 CONFIG_MSM_RPM_REGULATOR=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_SYSMON_COMM=y
+CONFIG_SMD_OFFSET_TCXO_STAT=0x0
+CONFIG_SMD_OFFSET_NEGATE_CLIENT_STAT=0x0
 CONFIG_MSM_PIL=y
 # CONFIG_MSM_PIL_MODEM is not set
 # CONFIG_MSM_PIL_QDSP6V3 is not set
@@ -527,6 +541,8 @@ CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 # CONFIG_MSM_CACHE_DUMP is not set
 # CONFIG_MSM_HSIC_SYSMON is not set
 CONFIG_MSM_CPU_PWRCTL=y
+# CONFIG_MSM_UARTDM is not set
+# CONFIG_REMOVE_EBI1_FIXED_CLK is not set
 
 #
 # System MMU
@@ -580,6 +596,7 @@ CONFIG_MULTI_IRQ_HANDLER=y
 # CONFIG_ARM_ERRATA_754322 is not set
 # CONFIG_ARM_ERRATA_754327 is not set
 # CONFIG_ARM_ERRATA_764369 is not set
+# CONFIG_ARM_ERRATA_775420 is not set
 # CONFIG_KSAPI is not set
 CONFIG_ARM_GIC=y
 # CONFIG_FIQ_DEBUGGER is not set
@@ -1255,6 +1272,16 @@ CONFIG_CABLE_DETECT_ACCESSORY=y
 CONFIG_CABLE_DETECT_ACCESSORY_BY_ADC=y
 # CONFIG_VP_A1028 is not set
 CONFIG_SENSORS_NFC_PN544=y
+# CONFIG_AMP_RT5501 is not set
+# CONFIG_AMP_TFA9887 is not set
+# CONFIG_INPUT_ISL29028 is not set
+# CONFIG_INPUT_ISL29029 is not set
+# CONFIG_KERNEL_LOG is not set
+# CONFIG_HSUART is not set
+# CONFIG_NDUID is not set
+# CONFIG_USER_PINS is not set
+# CONFIG_HRES_COUNTER is not set
+# CONFIG_MDMGPIO is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -1280,6 +1307,7 @@ CONFIG_SENSORS_NFC_PN544=y
 #
 # CONFIG_ALTERA_STAPL is not set
 # CONFIG_SLIMPORT_ANX7808 is not set
+# CONFIG_A6_SUPPORT is not set
 
 #
 # SCSI device support
@@ -1441,6 +1469,7 @@ CONFIG_WLAN=y
 # CONFIG_LIBRA_SDIOIF is not set
 # CONFIG_ATH6K_LEGACY_EXT is not set
 CONFIG_WCNSS_CORE=y
+# CONFIG_WCNSS_MEM_PRE_ALLOC is not set
 # CONFIG_ATH_COMMON is not set
 # CONFIG_BCMDHD is not set
 # CONFIG_BRCMFMAC is not set
@@ -1589,9 +1618,12 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_LGE_COMMON is not set
 # CONFIG_TOUCHSCREEN_LGE_SYNAPTICS is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
+# CONFIG_TOUCHSCREEN_ATMEL is not set
 # CONFIG_TOUCHSCREEN_ATMEL_224E is not set
+# CONFIG_TOUCHSCREEN_CYPRESS_TMA is not set
 # CONFIG_TOUCHSCREEN_CYPRESS_CS is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_3K=y
+# CONFIG_TOUCHSCREEN_CY8CTMA395 is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -1623,6 +1655,9 @@ CONFIG_SENSORS_AKM8975=y
 CONFIG_SENSORS_BMA250=y
 CONFIG_INPUT_CAPELLA_CM3629=y
 CONFIG_SENSORS_R3GD20=y
+# CONFIG_INPUT_LSM303DLH is not set
+# CONFIG_INPUT_ISL29023 is not set
+# CONFIG_INPUT_CAPELLA_CM3602 is not set
 CONFIG_MPU_SENSORS_MPU3050=y
 # CONFIG_MPU_SENSORS_ACCELEROMETER_NONE is not set
 # CONFIG_MPU_SENSORS_ADXL346 is not set
@@ -1648,6 +1683,7 @@ CONFIG_MPU_SENSORS_AK8975=y
 # CONFIG_MPU_SENSORS_HSCDTD004A is not set
 CONFIG_MPU_SENSORS_TIMERIRQ=y
 # CONFIG_MPU_SENSORS_DEBUG is not set
+# CONFIG_INPUT_OPTICALJOYSTICK is not set
 
 #
 # Hardware I/O ports
@@ -1690,6 +1726,7 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 CONFIG_SERIAL_MSM=y
 # CONFIG_SERIAL_MSM_CONSOLE is not set
 CONFIG_SERIAL_MSM_HS=y
+# CONFIG_SERIAL_MSM_HS_BRCM is not set
 # CONFIG_SERIAL_MSM_CLOCK_CONTROL is not set
 CONFIG_SERIAL_MSM_HSL=y
 CONFIG_SERIAL_MSM_HSL_CONSOLE=y
@@ -1867,6 +1904,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_DS2780 is not set
 # CONFIG_BATTERY_DS2781 is not set
 # CONFIG_BATTERY_DS2782 is not set
+# CONFIG_BATTERY_DS2746 is not set
 # CONFIG_BATTERY_SBS is not set
 # CONFIG_BATTERY_BQ27x00 is not set
 # CONFIG_BATTERY_MAX17040 is not set
@@ -1889,6 +1927,7 @@ CONFIG_PM8XXX_CCADC=y
 CONFIG_PM8921_BMS=y
 # CONFIG_BATTERY_BCL is not set
 # CONFIG_CHARGER_SMB347 is not set
+# CONFIG_MAX8903B_CHARGER is not set
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
 # CONFIG_HWMON_DEBUG_CHIP is not set
@@ -2064,6 +2103,7 @@ CONFIG_MFD_PM8921_CORE=y
 # CONFIG_MFD_PM8038_CORE is not set
 CONFIG_MFD_PM8XXX_IRQ=y
 # CONFIG_MFD_PM8821_IRQ is not set
+# CONFIG_TPS65200 is not set
 # CONFIG_MFD_TPS65090 is not set
 # CONFIG_MFD_AAT2870_CORE is not set
 CONFIG_MFD_PM8XXX_DEBUG=y
@@ -2216,11 +2256,13 @@ CONFIG_MSM_CAMERA_V4L2=y
 # CONFIG_IMX074 is not set
 CONFIG_S5K3H2YX=y
 CONFIG_S5K6A1GX=y
+# CONFIG_S5K4E5YX is not set
 # CONFIG_AR0260 is not set
 # CONFIG_OV2722 is not set
 # CONFIG_OV5647 is not set
 # CONFIG_MT9M114 is not set
 # CONFIG_IMX074_ACT is not set
+# CONFIG_IMX105_ACT is not set
 CONFIG_S5K3H2YX_ACT=y
 # CONFIG_S5K4E1 is not set
 CONFIG_MSM_CAMERA_FLASH_SC628A=y
@@ -2231,22 +2273,33 @@ CONFIG_MSM_CAMERA_SENSOR=y
 CONFIG_MSM_ACTUATOR=y
 CONFIG_MSM_GEMINI=y
 CONFIG_RAWCHIP=y
+# CONFIG_RAWCHIPII is not set
+# CONFIG_CAMERA_IMAGE_NONE_BOARD is not set
 CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
 # CONFIG_S5K3L1YX is not set
 # CONFIG_IMX091 is not set
+# CONFIG_IMX105 is not set
 # CONFIG_IMX175 is not set
 # CONFIG_IMX135 is not set
 # CONFIG_OV8838 is not set
 CONFIG_IMX175_ACT=y
+# CONFIG_RUMBAS_ACT is not set
 # CONFIG_AD5823_ACT is not set
 # CONFIG_AD5816_ACT is not set
 # CONFIG_TI201_ACT is not set
+# CONFIG_ACT_OIS_BINDER is not set
+# CONFIG_LC898212_ACT is not set
 # CONFIG_MT9V113 is not set
 CONFIG_IMX175_2LANE=y
+# CONFIG_S5K4E5YX_ACT is not set
 # CONFIG_OV5693_ACT is not set
 # CONFIG_OV5693 is not set
 # CONFIG_RAWCHIP_MCLK is not set
+# CONFIG_DISABLE_MCLK_RAWCHIP_TO_MAINCAM is not set
 # CONFIG_S5K6A2YA is not set
+# CONFIG_S5K6AAFX is not set
+# CONFIG_VD6869 is not set
+# CONFIG_OV4688 is not set
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 # CONFIG_MSM_WFD is not set
 CONFIG_RADIO_ADAPTERS=y
@@ -2329,6 +2382,10 @@ CONFIG_FB_DEFERRED_IO=y
 # CONFIG_FB_VIRTUAL is not set
 # CONFIG_FB_METRONOME is not set
 # CONFIG_FB_BROADSHEET is not set
+
+#
+# Miscellaneous I2C Chip support II
+#
 CONFIG_FB_MSM_HDMI_MHL=y
 CONFIG_FB_MSM_HDMI_MHL_SII9234=y
 CONFIG_INTERNAL_CHARGING_SUPPORT=y
@@ -2552,6 +2609,7 @@ CONFIG_SND_SOC_WCD9310=y
 CONFIG_SND_SOC_CS8427=y
 CONFIG_SND_SOC_MSM_STUB=y
 # CONFIG_SND_SOC_TPA2028D is not set
+# CONFIG_SND_SOC_TPA2051D3 is not set
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
@@ -2700,7 +2758,6 @@ CONFIG_USB_STORAGE_ONETOUCH=y
 CONFIG_USB_STORAGE_KARMA=y
 CONFIG_USB_STORAGE_CYPRESS_ATACB=y
 # CONFIG_USB_STORAGE_ENE_UB6250 is not set
-# CONFIG_USB_UAS is not set
 # CONFIG_USB_LIBUSUAL is not set
 
 #
@@ -2741,6 +2798,7 @@ CONFIG_USB_EHSET_TEST_FIXTURE=y
 # CONFIG_USB_QCOM_DIAG_BRIDGE is not set
 # CONFIG_USB_QCOM_MDM_BRIDGE is not set
 # CONFIG_USB_QCOM_KS_BRIDGE is not set
+# CONFIG_USB_QCOM_IPC_BRIDGE is not set
 CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG is not set
 CONFIG_USB_GADGET_DEBUG_FILES=y
@@ -2857,6 +2915,8 @@ CONFIG_LEDS_CLASS=y
 # CONFIG_LEDS_LP5523 is not set
 # CONFIG_LEDS_PCA955X is not set
 CONFIG_LEDS_PM8XXX=y
+# CONFIG_LEDS_PM8921 is not set
+# CONFIG_LEDS_PM8038 is not set
 # CONFIG_LEDS_PCA9633 is not set
 # CONFIG_LEDS_DAC124S085 is not set
 # CONFIG_LEDS_REGULATOR is not set
@@ -3030,6 +3090,7 @@ CONFIG_SPS=y
 # CONFIG_USB_BAM is not set
 CONFIG_SPS_SUPPORT_BAMDMA=y
 # CONFIG_SPS_SUPPORT_NDP_BAM is not set
+# CONFIG_MSM_AVTIMER is not set
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 
