--- a/arch/arm/configs/tenderloin_android_defconfig
+++ b/arch/arm/configs/tenderloin_android_defconfig
@@ -513,7 +513,7 @@ CONFIG_SMD_OFFSET_TCXO_STAT=0x0
 CONFIG_SMD_OFFSET_NEGATE_CLIENT_STAT=0x0
 CONFIG_MSM_PIL=y
 # CONFIG_MSM_PIL_MODEM is not set
-# CONFIG_MSM_PIL_QDSP6V3 is not set
+# CONFIG_MSM_PIL_QDSP6V3=y
 # CONFIG_MSM_PIL_QDSP6V4 is not set
 # CONFIG_MSM_PIL_LPASS_QDSP6V5 is not set
 # CONFIG_MSM_PIL_MSS_QDSP6V5 is not set
