config: set CONFIG_SND_SOC_MSM_QDSP6_INTF flag

--- a/arch/arm/configs/tenderloin_android_defconfig
+++ b/arch/arm/configs/tenderloin_android_defconfig
@@ -2509,7 +2509,7 @@ CONFIG_SND_SOC=y
 #
 # MSM SoC Audio support
 #
-# CONFIG_SND_SOC_MSM_QDSP6_INTF is not set
+CONFIG_SND_SOC_MSM_QDSP6_INTF=y
 # CONFIG_SND_SOC_MSM_QDSP6V2_INTF is not set
 # CONFIG_SND_SOC_QDSP6 is not set
 # CONFIG_SND_SOC_QDSP6V2 is not set
