--- a/arch/arm/configs/fighter_defconfig
+++ b/arch/arm/configs/fighter_defconfig
@@ -30,6 +30,9 @@ CONFIG_NEED_MACH_MEMORY_H=y
 CONFIG_PHYS_OFFSET=0x80400000
 CONFIG_GENERIC_BUG=y
 # CONFIG_ARCH_RANDOM is not set
+CONFIG_GENERIC_TIME_VSYSCALL=y
+CONFIG_ARM_USE_USER_ACCESSIBLE_TIMERS=y
+CONFIG_ARM_USER_ACCESSIBLE_TIMER_BASE=0xfffef000
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
 CONFIG_IRQ_WORK=y
@@ -373,7 +376,6 @@ CONFIG_BOARD_HEADER_FILE=""
 #
 # LGE Specific Patches
 #
-# CONFIG_LGE_CRASH_HANDLER is not set
 CONFIG_MACH_HTC=y
 
 #
@@ -513,7 +515,7 @@ CONFIG_MSM_BUS_RPM_MULTI_TIER_ENABLED=y
 CONFIG_MSM_WATCHDOG=y
 # CONFIG_MSM_WATCHDOG_V2 is not set
 # CONFIG_MSM_MEMORY_DUMP is not set
-CONFIG_MSM_DLOAD_MODE=y
+# CONFIG_MSM_DLOAD_MODE is not set
 # CONFIG_MSM_JTAG is not set
 # CONFIG_MSM_JTAG_MM is not set
 # CONFIG_MSM_SLEEP_STATS_DEVICE is not set
@@ -598,7 +600,6 @@ CONFIG_MULTI_IRQ_HANDLER=y
 # CONFIG_ARM_ERRATA_754322 is not set
 # CONFIG_ARM_ERRATA_754327 is not set
 # CONFIG_ARM_ERRATA_764369 is not set
-# CONFIG_ARM_ERRATA_775420 is not set
 # CONFIG_KSAPI is not set
 CONFIG_ARM_GIC=y
 # CONFIG_FIQ_DEBUGGER is not set
@@ -666,6 +667,7 @@ CONFIG_VIRT_TO_BUS=y
 CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_CLEANCACHE=y
+CONFIG_USE_USER_ACCESSIBLE_TIMERS=y
 # CONFIG_ARCH_MEMORY_PROBE is not set
 # CONFIG_ARCH_MEMORY_REMOVE is not set
 # CONFIG_ENABLE_DMM is not set
@@ -2727,6 +2729,7 @@ CONFIG_USB_STORAGE_ONETOUCH=y
 CONFIG_USB_STORAGE_KARMA=y
 CONFIG_USB_STORAGE_CYPRESS_ATACB=y
 # CONFIG_USB_STORAGE_ENE_UB6250 is not set
+# CONFIG_USB_UAS is not set
 # CONFIG_USB_LIBUSUAL is not set
 
 #
