--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -94,3 +94,7 @@ obj-$(CONFIG_USER_PINS)		+= user-pins.o
 obj-$(CONFIG_HRES_COUNTER)	+= hres_counter.o
 obj-$(CONFIG_A6)		+= a6/
 obj-$(CONFIG_MDMGPIO)		+= mdmgpio.o
+obj-$(CONFIG_AMP_TPA6185)       += tpa6185.o
+obj-$(CONFIG_AMP_TFA9887)	+= tfa9887.o
+obj-$(CONFIG_AMP_RT5501)        += rt5501.o
+obj-$(CONFIG_AMP_TFA9887L)	+= tfa9887l.o
