m7: enable HDMI/MHL, fix typo in board. Enabled audio board (merged from apq8064_M7 and board-m7-audio)

--- a/arch/arm/mach-msm/htc/m7ul/Makefile
+++ b/arch/arm/mach-msm/htc/m7ul/Makefile
@@ -4,7 +4,7 @@ obj-$(CONFIG_MACH_M7_UL) += board-m7-storage.o
 obj-$(CONFIG_MACH_M7_UL) += board-m7-gpiomux.o
 obj-$(CONFIG_MACH_M7_UL) += board-m7-keypad.o
 obj-$(CONFIG_MACH_M7_UL) += board-m7-wifi.o
-#obj-$(CONFIG_MACH_M7_UL) += board-m7-audio.o
+obj-$(CONFIG_MACH_M7_UL) += board-m7-audio.o
 obj-$(CONFIG_MACH_M7_UL) += board-m7-gpu.o
 ifdef CONFIG_MSM_CAMERA
 obj-$(CONFIG_MACH_M7_UL) += board-m7-camera.o
