--- a/arch/arm/configs/cyanogenmod_m7_defconfig
+++ b/arch/arm/configs/cyanogenmod_m7_defconfig
@@ -1292,6 +1292,9 @@ CONFIG_AMP_TFA9887=y
 # CONFIG_USER_PINS is not set
 # CONFIG_HRES_COUNTER is not set
 # CONFIG_MDMGPIO is not set
+CONFIG_AMP_TPA6185=y
+# CONFIG_AMP_RT5501_DELAY is not set
+CONFIG_AMP_TFA9887L=y
 # CONFIG_C2PORT is not set
 
 #
@@ -2432,6 +2435,9 @@ CONFIG_FB_VIRTUAL=y
 #
 # Miscellaneous I2C Chip support II
 #
+CONFIG_FB_MSM_HDMI_MHL=y
+CONFIG_FB_MSM_HDMI_MHL_SII9234=y
+CONFIG_INTERNAL_CHARGING_SUPPORT=y
 CONFIG_MSM_VIDC=y
 CONFIG_MSM_VIDC_1080P=y
 CONFIG_MSM_VIDC_VENC=y
@@ -2455,7 +2461,7 @@ CONFIG_FB_MSM_MIPI_DSI=y
 # CONFIG_FB_MSM_LCDC is not set
 # CONFIG_FB_MSM_LVDS is not set
 CONFIG_FB_MSM_OVERLAY=y
-# CONFIG_FB_MSM_DTV is not set
+CONFIG_FB_MSM_DTV=y
 # CONFIG_FB_MSM_EXTMDDI is not set
 # CONFIG_FB_MSM_TVOUT is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON is not set
@@ -2555,12 +2561,17 @@ CONFIG_FB_MSM_WRITEBACK_MSM_PANEL=y
 # CONFIG_FB_MSM_MIPI_NT35590_VIDEO_720P_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO_PANEL is not set
 # CONFIG_FB_MSM_EBI2_TMD_QVGA_EPSON_QCIF is not set
+# CONFIG_FB_MSM_HDMI_AS_PRIMARY is not set
 CONFIG_FB_MSM_PANEL_NONE=y
-# CONFIG_FB_MSM_EXT_INTERFACE_COMMON is not set
-# CONFIG_FB_MSM_HDMI_COMMON is not set
-# CONFIG_FB_MSM_HDMI_3D is not set
+CONFIG_FB_MSM_EXT_INTERFACE_COMMON=y
+CONFIG_FB_MSM_HDMI_COMMON=y
+CONFIG_FB_MSM_HDMI_3D=y
 # CONFIG_FB_MSM_HDMI_ADV7520_PANEL is not set
-# CONFIG_FB_MSM_HDMI_MSM_PANEL is not set
+CONFIG_FB_MSM_HDMI_MSM_PANEL=y
+# CONFIG_FB_MSM_HDMI_MSM_PANEL_DVI_SUPPORT is not set
+# CONFIG_FB_MSM_HDMI_MSM_PANEL_CEC_SUPPORT is not set
+# CONFIG_FB_MSM_HDMI_MHL_9244 is not set
+# CONFIG_FB_MSM_HDMI_MHL_8334 is not set
 # CONFIG_FB_MSM_TVOUT_NTSC_M is not set
 # CONFIG_FB_MSM_TVOUT_NTSC_J is not set
 # CONFIG_FB_MSM_TVOUT_PAL_BDGHIN is not set
@@ -2633,6 +2644,7 @@ CONFIG_SND_SOC=y
 # MSM SoC Audio support
 #
 CONFIG_SND_SOC_MSM_HOSTLESS_PCM=y
+CONFIG_SND_SOC_MSM_QDSP6_HDMI_AUDIO=y
 CONFIG_SND_SOC_MSM_QDSP6_INTF=y
 # CONFIG_SND_SOC_MSM_QDSP6V2_INTF is not set
 CONFIG_SND_SOC_VOICE=y
