m7: update defconfig for new sensors

--- a/arch/arm/configs/cyanogenmod_m7_defconfig
+++ b/arch/arm/configs/cyanogenmod_m7_defconfig
@@ -1704,11 +1704,20 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_SENSORS_AKM8975 is not set
 # CONFIG_SENSORS_PANASONIC_GYRO is not set
 # CONFIG_SENSORS_BMA250 is not set
+CONFIG_SIG_MOTION=y
 CONFIG_INPUT_CAPELLA_CM3629=y
+# CONFIG_WSENSOR_ENABLE is not set
+CONFIG_PSENSOR_KTHRESHOLD=y
 CONFIG_SENSORS_R3GD20=y
+CONFIG_R3GD20_NEW_SENSOR_TYPE=y
 # CONFIG_INPUT_LSM303DLH is not set
 # CONFIG_INPUT_ISL29023 is not set
 # CONFIG_INPUT_CAPELLA_CM3602 is not set
+CONFIG_CIR_ALWAYS_READY=y
+CONFIG_BOSCH_BMA250=y
+# CONFIG_BOSCH_BMA250_ENABLE_INT1 is not set
+# CONFIG_BOSCH_BMA250_ENABLE_INT2 is not set
+CONFIG_SENSORS_AK8963_NST=y
 CONFIG_MPU_SENSORS_MPU3050=y
 # CONFIG_MPU_SENSORS_ACCELEROMETER_NONE is not set
 # CONFIG_MPU_SENSORS_ADXL346 is not set
@@ -1785,6 +1794,7 @@ CONFIG_SERIAL_MSM_HSL_CONSOLE=y
 # CONFIG_SERIAL_IFX6X60 is not set
 # CONFIG_SERIAL_MSM_SMD is not set
 # CONFIG_SERIAL_XILINX_PS_UART is not set
+CONFIG_SERIAL_CIR=y
 
 #
 # Diag Support
