--- a/arch/arm/configs/cyanogenmod_m7_defconfig
+++ b/arch/arm/configs/cyanogenmod_m7_defconfig
@@ -2320,18 +2320,67 @@ CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
 # CONFIG_USB_S2255 is not set
 CONFIG_V4L_PLATFORM_DRIVERS=y
 # CONFIG_SOC_CAMERA is not set
+# CONFIG_VIDEO_NMI is not set
+CONFIG_ISDBT_NMI=y
+# CONFIG_ISDBT_NMI_DEBUG is not set
 
 #
 # Qualcomm MSM Camera And Video
 #
-# CONFIG_MSM_CAMERA is not set
+CONFIG_MSM_CAMERA=y
+# CONFIG_MSM_CAMERA_DEBUG is not set
+CONFIG_MSM_CAMERA_V4L2=y
+CONFIG_MSM_CAMERA_HTC_HAL_VERSION=3
 
 #
 # Camera Sensor Selection
 #
+# CONFIG_IMX074 is not set
+# CONFIG_S5K3H2YX is not set
+# CONFIG_S5K6A1GX is not set
+CONFIG_AR0260=y
+# CONFIG_AS0260 is not set
+CONFIG_OV2722=y
+# CONFIG_OV5647 is not set
+# CONFIG_MT9M114 is not set
+# CONFIG_IMX074_ACT is not set
+# CONFIG_S5K3H2YX_ACT is not set
+# CONFIG_S5K4E1 is not set
+CONFIG_MSM_CAMERA_FLASH_SC628A=y
 # CONFIG_IMX072 is not set
+# CONFIG_OV2720 is not set
+CONFIG_MSM_CAMERA_FLASH=y
+CONFIG_MSM_CAMERA_SENSOR=y
+CONFIG_MSM_ACTUATOR=y
+CONFIG_MSM_GEMINI=y
+# CONFIG_RAWCHIP is not set
+CONFIG_RAWCHIPII=y
+# CONFIG_CAMERA_IMAGE_NONE_BOARD is not set
+CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
+# CONFIG_S5K3L1YX is not set
+# CONFIG_IMX091 is not set
+# CONFIG_IMX175 is not set
+CONFIG_IMX135=y
+# CONFIG_OV8838 is not set
+# CONFIG_IMX175_ACT is not set
+CONFIG_RUMBAS_ACT=y
+# CONFIG_AD5823_ACT is not set
+# CONFIG_AD5816_ACT is not set
+CONFIG_TI201_ACT=y
+CONFIG_ACT_OIS_BINDER=y
+CONFIG_LC898212_ACT=y
+# CONFIG_MT9V113 is not set
+# CONFIG_IMX175_2LANE is not set
+# CONFIG_OV5693_ACT is not set
+# CONFIG_OV5693 is not set
+# CONFIG_RAWCHIP_MCLK is not set
+# CONFIG_DISABLE_MCLK_RAWCHIP_TO_MAINCAM is not set
+# CONFIG_S5K6A2YA is not set
+# CONFIG_S5K6AAFX is not set
+CONFIG_VD6869=y
+CONFIG_OV4688=y
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
-# CONFIG_MSM_WFD is not set
+CONFIG_MSM_VIDC=y
 CONFIG_RADIO_ADAPTERS=y
 # CONFIG_RADIO_SI470X is not set
 # CONFIG_USB_MR800 is not set
@@ -2406,7 +2455,6 @@ CONFIG_FB_VIRTUAL=y
 CONFIG_FB_MSM_HDMI_MHL=y
 CONFIG_FB_MSM_HDMI_MHL_SII9234=y
 CONFIG_INTERNAL_CHARGING_SUPPORT=y
-CONFIG_MSM_VIDC=y
 CONFIG_MSM_VIDC_1080P=y
 CONFIG_MSM_VIDC_VENC=y
 CONFIG_MSM_VIDC_VDEC=y
