tenderloin: update defconfig for audio

--- a/arch/arm/configs/tenderloin_android_defconfig
+++ b/arch/arm/configs/tenderloin_android_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.73 Kernel Configuration
+# Linux/arm 3.4.75 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -30,6 +30,7 @@ CONFIG_NEED_MACH_MEMORY_H=y
 CONFIG_PHYS_OFFSET=0x40200000
 CONFIG_GENERIC_BUG=y
 # CONFIG_ARCH_RANDOM is not set
+# CONFIG_GENERIC_TIME_VSYSCALL is not set
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
 CONFIG_IRQ_WORK=y
@@ -493,9 +494,10 @@ CONFIG_MSM_DALRPC_TEST=m
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
 # CONFIG_AMSS_7X25_VERSION_2008 is not set
-# CONFIG_MSM8X60_AUDIO=y
+CONFIG_MSM8X60_AUDIO=y
 # CONFIG_MSM8X60_AUDIO_1X is not set
-CONFIG_RTAC=y
+# CONFIG_MSM8X60_FTM_AUDIO_DEVICES is not set
+# CONFIG_RTAC is not set
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 CONFIG_MSM_DMA_TEST=m
 # CONFIG_WIFI_CONTROL_FUNC is not set
@@ -513,7 +515,7 @@ CONFIG_SMD_OFFSET_TCXO_STAT=0x0
 CONFIG_SMD_OFFSET_NEGATE_CLIENT_STAT=0x0
 CONFIG_MSM_PIL=y
 # CONFIG_MSM_PIL_MODEM is not set
-# CONFIG_MSM_PIL_QDSP6V3=y
+CONFIG_MSM_PIL_QDSP6V3=y
 # CONFIG_MSM_PIL_QDSP6V4 is not set
 # CONFIG_MSM_PIL_LPASS_QDSP6V5 is not set
 # CONFIG_MSM_PIL_MSS_QDSP6V5 is not set
@@ -692,6 +694,7 @@ CONFIG_VIRT_TO_BUS=y
 # CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_CLEANCACHE is not set
+# CONFIG_USE_USER_ACCESSIBLE_TIMERS is not set
 # CONFIG_ARCH_MEMORY_PROBE is not set
 # CONFIG_ARCH_MEMORY_REMOVE is not set
 # CONFIG_ENABLE_DMM is not set
@@ -1325,6 +1328,9 @@ CONFIG_NDUID=y
 CONFIG_USER_PINS=y
 CONFIG_HRES_COUNTER=y
 CONFIG_MDMGPIO=y
+# CONFIG_AMP_TPA6185 is not set
+# CONFIG_AMP_RT5501_DELAY is not set
+# CONFIG_AMP_TFA9887L is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -1676,11 +1682,18 @@ CONFIG_PMIC8058_OTHC=y
 # CONFIG_SENSORS_AKM8975 is not set
 # CONFIG_SENSORS_PANASONIC_GYRO is not set
 # CONFIG_SENSORS_BMA250 is not set
+# CONFIG_SIG_MOTION is not set
 # CONFIG_INPUT_CAPELLA_CM3629 is not set
+# CONFIG_WSENSOR_ENABLE is not set
+# CONFIG_PSENSOR_KTHRESHOLD is not set
 # CONFIG_SENSORS_R3GD20 is not set
+# CONFIG_R3GD20_NEW_SENSOR_TYPE is not set
 CONFIG_INPUT_LSM303DLH=y
 CONFIG_INPUT_ISL29023=y
 # CONFIG_INPUT_CAPELLA_CM3602 is not set
+# CONFIG_CIR_ALWAYS_READY is not set
+# CONFIG_BOSCH_BMA250 is not set
+# CONFIG_SENSORS_AK8963_NST is not set
 CONFIG_MPU_SENSORS_MPU3050=y
 # CONFIG_MPU_SENSORS_ACCELEROMETER_NONE is not set
 # CONFIG_MPU_SENSORS_ADXL346 is not set
@@ -1755,6 +1768,7 @@ CONFIG_SERIAL_MSM_HSL_CONSOLE=y
 # CONFIG_SERIAL_ALTERA_UART is not set
 # CONFIG_SERIAL_MSM_SMD is not set
 # CONFIG_SERIAL_XILINX_PS_UART is not set
+# CONFIG_SERIAL_CIR is not set
 
 #
 # Diag Support
@@ -2269,7 +2283,7 @@ CONFIG_VIDEO_IR_I2C=y
 # CONFIG_V4L_USB_DRIVERS is not set
 # CONFIG_V4L_PLATFORM_DRIVERS is not set
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
-# CONFIG_MSM_WFD is not set
+CONFIG_MSM_VIDC=y
 # CONFIG_RADIO_ADAPTERS is not set
 
 #
@@ -2325,7 +2339,6 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 #
 # Miscellaneous I2C Chip support II
 #
-CONFIG_MSM_VIDC=y
 CONFIG_MSM_VIDC_1080P=y
 CONFIG_MSM_VIDC_VENC=y
 CONFIG_MSM_VIDC_VDEC=y
@@ -2489,8 +2502,8 @@ CONFIG_SND_JACK=y
 # CONFIG_SND_DYNAMIC_MINORS is not set
 CONFIG_SND_SUPPORT_OLD_API=y
 CONFIG_SND_VERBOSE_PROCFS=y
-# CONFIG_SND_VERBOSE_PRINTK=y
-# CONFIG_SND_DEBUG=y
+# CONFIG_SND_VERBOSE_PRINTK is not set
+# CONFIG_SND_DEBUG is not set
 # CONFIG_SND_RAWMIDI_SEQ is not set
 # CONFIG_SND_OPL3_LIB_SEQ is not set
 # CONFIG_SND_OPL4_LIB_SEQ is not set
@@ -2509,23 +2522,19 @@ CONFIG_SND_SOC=y
 #
 # MSM SoC Audio support
 #
-CONFIG_SND_SOC_MSM_QDSP6_INTF=y
-# CONFIG_SND_SOC_MSM_QDSP6V2_INTF is not set
-# CONFIG_SND_SOC_QDSP6 is not set
-# CONFIG_SND_SOC_QDSP6V2 is not set
-CONFIG_SND_MSM_MVS_DAI_SOC=y
 CONFIG_SND_SOC_MSM8X60_PCM=y
 CONFIG_SND_SOC_MSM8X60_DAI=y
-CONFIG_SND_VOIP_PCM=y
-CONFIG_SND_SOC_MSM8X60_PLATFORM=y
 CONFIG_SND_SOC_MSM8X60=y
-CONFIG_SND_SOC_I2C_AND_SPI=y
+# CONFIG_MSM_8x60_VOIP is not set
+CONFIG_SND_SOC_MSM_QDSP6_INTF=y
+# CONFIG_SND_SOC_MSM_QDSP6V2_INTF is not set
+# CONFIG_SND_SOC_VOICE is not set
+# CONFIG_SND_SOC_QDSP6 is not set
+# CONFIG_SND_SOC_QDSP6V2 is not set
 # CONFIG_SND_SOC_MSM8660_APQ is not set
 # CONFIG_SND_SOC_DUAL_AMIC is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
-CONFIG_SND_SOC_WM_HUBS=y
-CONFIG_SND_SOC_WM8994=y
 # CONFIG_SND_SOC_TPA2028D is not set
 # CONFIG_SND_SOC_TPA2051D3 is not set
 # CONFIG_SOUND_PRIME is not set
@@ -3083,6 +3092,7 @@ CONFIG_EXT4_FS_XATTR=y
 # CONFIG_EXT4_FS_POSIX_ACL is not set
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_EXT4_DEBUG=y
+# CONFIG_EXT4_E2FSCK_RECOVER is not set
 CONFIG_JBD=y
 # CONFIG_JBD_DEBUG is not set
 CONFIG_JBD2=y
@@ -3104,6 +3114,7 @@ CONFIG_INOTIFY_USER=y
 # CONFIG_QUOTACTL is not set
 # CONFIG_AUTOFS4_FS is not set
 CONFIG_FUSE_FS=y
+# CONFIG_FUSE_SD is not set
 # CONFIG_CUSE is not set
 
 #
