OTG: usb_multi_charger_detect
Ported from JCsullins 3.0 Kernel

Change-Id: I3908fd6e4fa6c526c1c9bf9d178491d78a3c6022

--- a/arch/arm/configs/cyanogenmod_tenderloin_defconfig
+++ b/arch/arm/configs/cyanogenmod_tenderloin_defconfig
@@ -2829,6 +2829,7 @@ CONFIG_USB_MSM_72K=y
 # CONFIG_USB_DUMMY_HCD is not set
 CONFIG_USB_GADGET_DUALSPEED=y
 # CONFIG_USB_GADGET_SUPERSPEED is not set
+CONFIG_USB_MULTIPLE_CHARGER_DETECT=y
 # CONFIG_USB_ZERO is not set
 # CONFIG_USB_AUDIO is not set
 # CONFIG_USB_ETH is not set
