clock-8x60: implement config flag REMOVE_SMI_2X_CLK, that disable the 2x_axi_clk. Causes problems on some 8x60 (without iommu)

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -2677,4 +2677,8 @@ config MSM_UARTDM
 	help
 	  Provides access to the high speed uart ports.
 
+config REMOVE_SMI_2X_CLK
+       bool "remove 2x_axi_clk for SMI"
+       default n
+
 endif
