tenderloin: use built-in ath6kl

--- a/arch/arm/configs/cyanogenmod_tenderloin_defconfig
+++ b/arch/arm/configs/cyanogenmod_tenderloin_defconfig
@@ -575,6 +575,7 @@ CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 # CONFIG_MSM_CPU_PWRCTL is not set
 CONFIG_MSM_UARTDM=y
 # CONFIG_REMOVE_EBI1_FIXED_CLK is not set
+CONFIG_REMOVE_SMI_2X_CLK=y
 
 #
 # System MMU
@@ -1205,13 +1206,18 @@ CONFIG_WEXT_CORE=y
 CONFIG_WEXT_PROC=y
 CONFIG_WEXT_SPY=y
 CONFIG_WEXT_PRIV=y
-# CONFIG_CFG80211 is not set
+CONFIG_CFG80211=y
+# CONFIG_NL80211_TESTMODE is not set
+# CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
+# CONFIG_CFG80211_REG_DEBUG is not set
+CONFIG_CFG80211_DEFAULT_PS=y
+# CONFIG_CFG80211_DEBUGFS is not set
+# CONFIG_CFG80211_INTERNAL_REGDB is not set
+CONFIG_CFG80211_WEXT=y
 CONFIG_WIRELESS_EXT_SYSFS=y
 # CONFIG_LIB80211 is not set
-
-#
-# CFG80211 needs to be enabled for MAC80211
-#
+# CONFIG_CFG80211_ALLOW_RECONNECT is not set
+# CONFIG_MAC80211 is not set
 # CONFIG_WIMAX is not set
 CONFIG_RFKILL=y
 CONFIG_RFKILL_PM=y
@@ -1546,10 +1552,21 @@ CONFIG_USB_NET_CDC_NCM=y
 # CONFIG_MSM_RMNET_USB is not set
 CONFIG_WLAN=y
 # CONFIG_USB_ZD1201 is not set
+# CONFIG_USB_NET_RNDIS_WLAN is not set
 CONFIG_LIBRA_SDIOIF=m
 # CONFIG_ATH6K_LEGACY_EXT is not set
+CONFIG_ATH_COMMON=y
+# CONFIG_ATH_DEBUG is not set
+CONFIG_ATH6KL=m
+CONFIG_ATH6KL_SDIO=y
+# CONFIG_ATH6KL_USB is not set
+CONFIG_ATH6KL_DEBUG=y
 # CONFIG_BCMDHD is not set
+# CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
+# CONFIG_IWM is not set
+# CONFIG_LIBERTAS is not set
+# CONFIG_MWIFIEX is not set
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
@@ -2995,6 +3012,7 @@ CONFIG_RTC_DRV_PM8XXX=y
 #
 CONFIG_STAGING=y
 # CONFIG_USBIP_CORE is not set
+# CONFIG_PRISM2_USB is not set
 # CONFIG_ECHO is not set
 # CONFIG_ASUS_OLED is not set
 # CONFIG_RTLLIB is not set
