--- a/arch/arm/configs/cyanogenmod_tenderloin_defconfig
+++ b/arch/arm/configs/cyanogenmod_tenderloin_defconfig
@@ -224,8 +224,8 @@ CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_DEFAULT_DEADLINE is not set
-# CONFIG_DEFAULT_ROW is not set
-CONFIG_DEFAULT_CFQ=y
+CONFIG_DEFAULT_ROW=y
+# CONFIG_DEFAULT_CFQ
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK=y
