vibrator:  remove PMIC8XXX_VIBRATOR
Was casuing duplicate entries which was causing the vibrator
not to work

Change-Id: I12cadd327e1e13dafc31fb287ee0a21fb8c1b669

--- a/arch/arm/configs/cyanogenmod_tenderloin_defconfig
+++ b/arch/arm/configs/cyanogenmod_tenderloin_defconfig
@@ -1301,7 +1301,7 @@ CONFIG_ANDROID_PMEM=y
 # CONFIG_TSPP is not set
 # CONFIG_HAPTIC_ISA1200 is not set
 CONFIG_PMIC8058_PWM=y
-CONFIG_PMIC8XXX_VIBRATOR=y
+# CONFIG_PMIC8XXX_VIBRATOR is not set
 # CONFIG_PMIC8XXX_VIBRATOR_PWM is not set
 # CONFIG_ANDROID_VIBRATOR is not set
 # CONFIG_TOUCHSENSE_VIBRATOR is not set
